# s3-download-files-capnp-generator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: build-alpine.yml  build-container.yml  build-macos.yml  build-ubuntu.yml  build-windows.yml  code-check.yml  create-release.yml  release-build.yml  rust.yml
src/: args.rs  capnp.rs  main.rs  s3.rs
