[package]
name = "s3-download-files-capnp-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
openssl = { version = "0.10.55", features = ["vendored"] }
regex = "1.9.0"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
tokio = { version = "1.29.1", features = ["full"] }
